--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Multiples</h1>
+    <header>
+      <h1>Loops</h1>
+    </header>
+    <main>
+      <div id="for">
+        <h2>For Loop</h2>
+        <p>
+          Syntax: for(initialization;condition;increment/decrement){code block}
+        </p>
+      </div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
