--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiples</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Electrolize&family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <!-- external stylesheet -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -11,7 +19,7 @@
       <h1>Loops</h1>
     </header>
     <main>
-      <div id="for">
+      <div class="for">
         <h2>For Loop</h2>
         <p>
           Syntax: for(initialization;condition;increment/decrement){code block}
